1999-01-10  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esddsp.in: corrected format of LD_PRELOAD entries, and added
	LD_PRELOAD_PATH to make things a bit cleaner.  Should correct the
	"error loading shared libs: symbol dlsym not found" problems

1998-12-30  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esdmgr.c, proto.c: workaround for zero additional data protocol
	handlers.  just require an int of data for now. fix noted in source. 

	* audio.c, audio_alsa.c, audio_oss.c, audio_solaris.c, esd.c,
 	esd.h: added -d DEVICE option - use an alternate audio device.
  	This sets esd_audio_device (const char *) which can be used by the
 	platform specific esd_audio_open() functions.  audio_oss updated,
 	audio_solaris updated but not tested.  other updates requested.

	* esd-server.h, esd.c, samples.c: actually reset *everything* in
	the daemon on a SIGHUP

1998-12-29  Yo Ric Dude  <ericmit@ix.netcom.com>

	* clients.c, esd-server.h, esd.c, proto.c, samples.c: option to
	autosuspend after a number of seconds of audio inactivity.
	"esd -as SECS" to set timeout to SECS seconds, SECS > 0.
	* esd.c, clients.c: call esd_audio_pause() only if select has
 	returned no clients ready, and no samples are playing.  other
	miscellaneous tweaks to the when-to-sleep algorithm...
	* players.c: add a variable so we know if we're playing samples
	* all other server files: editorial changes, prettier for printing 
	
1998-12-27  Yo Ric Dude  <ericmit@ix.netcom.com>

	* proto.c: missed one code path for setting is_ok...
	* clients.c, esd-server.h, esd.c, esd.h, esdloop.c, esdsample.c, 
	filter.c, mix.c, players.c, proto.c: moved some prototypes to
	more logical locations, and general -ansi -Wall -pedantic stuff.
	* esd.c: added -h option for usage.

1998-12-22  Yo Ric Dude  <ericmit@ix.netcom.com>

	* audio_alsa.c, clients.c: from bibek, more alsa patches and a
 	slightly more sane "can i pause" algorithm.

Mon Dec 21 21:44:44 EST 1998 Mandrake <mandrake@mandrake.net>
